--- a/unityexample.createparenttool2.asmdef
+++ b/unityexample.createparenttool2.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "unityexample.createparenttool",
+    "name": "unityexample.createparenttool2",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
