--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unityexample.createparent2",
-  "version": "1.0.13",
-  "displayName": "Create Parent For Selected",
+  "version": "1.0.2",
+  "displayName": "Create Parent For Selected2",
   "description": "This tool adds a menu option to\n\nEdit > Create Parent for Selected\n\nIt creates an empty parent for the selected objects in the hierarchy.",
   "unity": "2018.1",
   "unityRelease": "0b5",
